# AniRecs_TFHB

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test.db
.github/workflows/: main.yaml
Backend/: database.py  main.py  models.py  schemas.py
Backend/routers/: animes.py  items.py
Backend/schemas/: animes.py
anirecs/backend/: database.py  settings.py
anirecs/backend/app/: CRUD.py  database.py  main.py  models.py  populate.py  secrets.py
anirecs/backend/app/routers/: animes.py  history.py  recommend.py  users.py
anirecs/backend/app/schemas/: animes.py  history.py  users.py
anirecs/backend/schemas/: users.py
anirecs/backend/tests/: test_animes.py  test_history.py  test_recommend.py  test_search.py  test_users.py
anirecs/frontend/: package-lock.json
anirecs/frontend/public/: index.html
anirecs/frontend/src/: Anime.jsx  AnimeList.jsx  App.css  App.jsx  History.jsx  Home.jsx  NavBar.css  NavBar.jsx  PrivateRoute.jsx  Recommendations.jsx  SignIn.jsx  SingUp.jsx  index.js
backend/app/: CRUD.py  database.py  main.py  models.py
backend/app/routers/: animes.py  history.py  recommend.py  users.py
backend/tests/: test_animes.py
