[tool.poetry]
name = "anirecs-tfhb"
version = "0.1.0"
description = ""
authors = ["Ahmad Sarhan <ahmadhasansarhana@gmail.com>", "Ghadeer Akleh <ghadeer.akleh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
