[tool.poetry]
name = "anirecs"
version = "0.1.0"
description = "anime recommendation system"
authors = ["Ahmad Sarhan <ahmadhasansarhana@gmail.com>", "Ghadeer Akleh <ghadeer.akleh@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
