[tool.poetry]
name = "anirecs"
version = "0.1.0"
description = "anime recommendation system"
authors = ["Ahmad Sarhan <ahmadhasansarhana@gmail.com>", "Ghadeer Akleh <ghadeer.akleh@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
bandit = "^1.7.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
requests = "^2.31.0"
tqdm = "^4.66.2"
pytest-cov = "^5.0.0"
psycopg2 = "^2.9.10"
environs = "^14.1.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
